[BC-2] JUnit IT and UT added.
